--- a/Copie_de_momentum.ipynb
+++ b/Copie_de_momentum.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNsAEesBUHUvSqgyhgcdlJ1",
+      "authorship_tag": "ABX9TyPGSijzJwR3lWqhTvzjYfZs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
         "from sklearn.externals import joblib\r\n",
         "from flask import Flask, jsonify, request\r\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +131,7 @@
         "#as rules are very complicated\r\n",
         "#plz check the links above to understand more about it\r\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -170,10 +170,15 @@
         "#dfTrain.sort_index()\r\n",
         "#dfTest.sort_index()\r\n",
         "\r\n",
-        "X_Train=dfTrain.loc[:,df.columns != 'result']\r\n",
+        "X_TrainTMP=dfTrain.loc[:,df.columns != 'result']\r\n",
         "Y_Train=dfTrain.loc[:,'result]\r\n",
-        "X_Test=dfTest.loc[:,df.columns != 'result']\r\n",
-        "Y_Test=dfTest.loc[:,'result']\r\n"
+        "X_TestTMP=dfTest.loc[:,df.columns != 'result']\r\n",
+        "Y_Test=dfTest.loc[:,'result']\r\n",
+        "\r\n",
+        "X_Train=dfTrain.loc[:,df.columns != 'date']\r\n",
+        "\r\n",
+        "X_Test=dfTest.loc[:,df.columns != 'date']\r\n",
+        "\r\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -220,6 +225,72 @@
         "\r\n",
         "    grid.fit(X, Y)\r\n",
         "    return grid"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mk6yO3rogZHn"
+      },
+      "source": [
+        "#regresssion linéaire"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ve3jGiwXgd-d"
+      },
+      "source": [
+        "modelLineaire = LinearRegression()\r\n",
+        "\r\n",
+        "\r\n",
+        "modelLineaire.fit(X_Train, Y_Train)\r\n",
+        "Y_Prediction=modelLineaire.predict(X_Test)\r\n",
+        "\r\n",
+        "Y_PredictionBinarie=[]\r\n",
+        "for i in range(len(Y_Prediction)):\r\n",
+        "    if Y_Prediction[i]>0.5:\r\n",
+        "        Y_PredictionBinarie.append(1)\r\n",
+        "    else:\r\n",
+        "       Y_PredictionBinarie.append(0)\r\n",
+        "\r\n",
+        "counter=0\r\n",
+        "iterator=0\r\n",
+        "for i, value in Y_Test.iteritems():\r\n",
+        "\r\n",
+        "    if(int(Y_PredictionBinarie[iterator])==int(value)):\r\n",
+        "       counter=counter+1\r\n",
+        "    iterator=iterator+1\r\n",
+        "\r\n",
+        "\r\n",
+        "# The coefficients\r\n",
+        "print('Coefficients: \\n', modelLineaire.coef_)\r\n",
+        "# The mean squared error\r\n",
+        "print('Moyenne des écarts au carré: %.2f'\r\n",
+        "      % mean_squared_error(Y_Test, Y_Prediction))\r\n",
+        "\r\n",
+        "\r\n",
+        "print(\"Taux de bons resultats: \",counter/8,'%')\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ytir8OCWgjF1"
+      },
+      "source": [
+        "plt.scatter(X_Test.index, Y_Test,color='black', s=1)\r\n",
+        "plt.scatter(X_Test.index, Y_Prediction, color='blue', s=1)\r\n",
+        "\r\n",
+        "plt.xticks(())\r\n",
+        "plt.yticks(())\r\n",
+        "\r\n",
+        "plt.show()"
       ],
       "execution_count": null,
       "outputs": []
@@ -296,6 +367,82 @@
       "cell_type": "code",
       "metadata": {
         "id": "hnWLOBtCy6M3"
+      },
+      "source": [
+        "plt.scatter(X_Test.index, Y_Test,color='black', s=1)\r\n",
+        "plt.scatter(X_Test.index, Y_Prediction, color='blue', s=1)\r\n",
+        "\r\n",
+        "plt.xticks(())\r\n",
+        "plt.yticks(())\r\n",
+        "\r\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EcPsDnvee-pl"
+      },
+      "source": [
+        "#K Nearest Neighbors"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FwXAikkMgGzz"
+      },
+      "source": [
+        "modelKNeighbors = KNeighborsRegressor\r\n",
+        "param_grid = {\r\n",
+        "    'n_neighbors': [1,3, 5, 10, 15, 20,50,100,300],  \r\n",
+        "    'p': [0.5, 1, 2],\r\n",
+        "    'algorithm': ['ball_tree', 'kd_tree'],\r\n",
+        "    'weights': ['uniform', 'distance']\r\n",
+        "}\r\n",
+        "useful_columns = ['param_' + k for k in param_grid.keys()] + [ 'mean_test_score', 'std_test_score', 'rank_test_score']\r\n",
+        "\r\n",
+        "grid = grid_search(X_Train, Y_Train, modelKNeighbors, param_grid)\r\n",
+        "pd.DataFrame(grid.cv_results_)[useful_columns].sort_values('rank_test_score')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XojFtvG-fHVY"
+      },
+      "source": [
+        "modelKNeighbors = KNeighborsRegressor(n_neighbors=10,weights='distance',algorithm='kd_tree',p=1).fit(X_Train,Y_Train)\r\n",
+        "Y_Prediction=modelKNeighbors.predict(X_Test)\r\n",
+        "\r\n",
+        "Y_PredictionBinarie=[]\r\n",
+        "for i in range(len(Y_Prediction)):\r\n",
+        "    if Y_Prediction[i]>0.5:\r\n",
+        "        Y_PredictionBinarie.append(1)\r\n",
+        "    else:\r\n",
+        "       Y_PredictionBinarie.append(0)\r\n",
+        "\r\n",
+        "counter=0\r\n",
+        "iterator=0\r\n",
+        "for i, value in Y_Test.iteritems():\r\n",
+        "\r\n",
+        "    if(int(Y_PredictionBinarie[iterator])==int(value)):\r\n",
+        "       counter=counter+1\r\n",
+        "    iterator=iterator+1\r\n",
+        "\r\n",
+        "print(\"Taux de bons resultats: \", counter/8,'%')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BFQhWbBNgVXn"
       },
       "source": [
         "plt.scatter(X_Test.index, Y_Test,color='black', s=1)\r\n",
