correct few bugs

--- a/MRPair.ipynb
+++ b/MRPair.ipynb
@@ -793,9 +793,13 @@
     "    if df.iloc[-1][\"zscore\"] <= zexit_threshold and df.iloc[-1][\"zscore\"]>= -1*zexit_threshold and (totalShort0 > 0) :\n",
     "        closeShort = request_client.post_order(symbol=pair0, side=OrderSide.BUY, ordertype=OrderType.MARKET, quantity=totalShort0, positionSide=\"SHORT\")\n",
     "        closeLong = request_client.post_order(symbol=pair1, side=OrderSide.SELL, ordertype=OrderType.MARKET,quantity=totalLong1, positionSide=\"LONG\")\n",
+    "        totalShort0 = 0\n",
+    "        totalLong1 = 0\n",
     "    if df.iloc[-1][\"zscore\"] <= zexit_threshold and df.iloc[-1][\"zscore\"]>= -1*zexit_threshold and (totalLong0 > 0) :\n",
     "        closeLong = request_client.post_order(symbol=pair0, side=OrderSide.SELL, ordertype=OrderType.MARKET, quantity=totalLong0, positionSide=\"LONG\")\n",
     "        closeShort = request_client.post_order(symbol=pair1, side=OrderSide.BUY, ordertype=OrderType.MARKET,quantity=totalShort1, positionSide=\"SHORT\")\n",
+    "        totalLong0 = 0\n",
+    "        totalShort1 = 0\n",
     "        \n",
     "    return totalShort0, totalLong0, totalShort1, totalLong1"
    ]
